# libgit2.nvim

./: .gitignore  CMakeLists.txt  Readme.md
.nvim/: autoset.vim  config.json
.nvim/script/: CmakeClear  CmakeConfiguration  Ctags  Test
cmake/: depends.cmake  macro.cmake
doc/: libgit2-nvim.txt
src/main/: enum.h  error.h  libgit2.c  logger.c  logger.h
src/main/api/: api.h  commit.c  index.c  push.c  remote.c  repository.c  revparse.c  signature.c  status.c  tree.c
src/main/metatables/: gc.h  index.h  len.h  metatables.c  metatables.h  tostring.h
src/main/util/: allocator.c  allocator.h  util.c  util.h
src/test/: commit.lua  index.lua  info.lua  main.c  main.lua  operates.lua  option.lua  remote.lua  repoistory.lua  status.lua
